--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 body{
     margin: 0;
-    background: linear-gradient(90deg, rgb(75, 0, 90), rgb(106, 0, 128), rgb(160, 0, 192));
+    background: linear-gradient(250deg, #dff0b9, #9be0b2, #64b69f, #47488c, #6d3468);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .header{
-    box-shadow: 0px 0px 10px 0.5px ;
-    border-radius: 0 0 10px 10px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.502) ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,12 +14,28 @@ body{
     padding: 10px;
 }
 
-main h1{
+.site-title{
     margin: 0;
+    margin-left: 5px;
     color: white;
+    font-family: 'Barrio';
+    text-shadow: #47488c 0px 0px 5px;
 }
 
 .logo{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+}
+
+.footer{
+    padding: 10px;
+}
+
+.footer h1{
+    text-align: center;
+    font-family: 'Rubik';
+    color: darkslategray;
+    font-weight: 400;
+    font-size: 15px;
+    margin: 0;
 }
