--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,111 @@
-body{
+body {
+    min-height: 100vh;
+    font-family: "Karla", sans-serif;
     margin: 0;
-    background: linear-gradient(250deg, #dff0b9, #9be0b2, #64b69f, #47488c, #6d3468);
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
 }
 
-.header{
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.502) ;
+main {
+    margin-inline: auto;
+    padding: 36px;
+    /* max-width: 600px; */
+}
+
+.header {
     display: flex;
+    align-items: center;
+    height: 65px;
+    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    color: white;
+    padding: 20px;
+}
+
+.header > img {
+    height: 100%;
+    margin-right: 6px;
+}
+
+.header > h1 {
+    font-size: 1.25rem;
+    margin-right: auto;
+}
+
+.form {
+    display: grid;
+    grid-template: auto auto / 1fr 1fr;
+    gap: 17px;
+    margin-bottom: 17px;
+}
+
+.form input {
+    width: 100%;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #D5D4D8;
+    text-indent: 5px;
+}
+
+.form button {
+    grid-column: 1 / -1;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form input, .form button {
+    min-height: 40px;
+    font-family: "Karla", sans-serif;
+}
+
+.meme {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 0;
-    padding: 10px;
 }
 
-.site-title{
-    margin: 0;
-    margin-left: 5px;
-    color: white;
-    font-family: 'Barrio';
-    text-shadow: #47488c 0px 0px 5px;
+.meme > img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 3px;
+    margin-bottom: 10px;
 }
 
-.logo{
-    width: 60px;
-    height: 60px;
-}
-
-.footer{
-    padding: 10px;
-}
-
-.footer h1{
+.meme span {
+    position: absolute;
     text-align: center;
-    font-family: 'Rubik';
-    color: darkslategray;
-    font-weight: 400;
-    font-size: 15px;
-    margin: 0;
+    margin-block: 15px;
+    padding-inline: 5px;
+    font-family: impact, sans-serif;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
+}
+
+.body::after{
+    content: '';
+    display: block;
+    height: 50px;
 }
