--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
     min-height: 100vh;
     font-family: "Karla", sans-serif;
     margin: 0;
-    position: relative;
 }
 
 main {
@@ -68,10 +67,9 @@ main {
 }
 
 .meme > img {
-    max-width: 100%;
+    max-width: auto;
     height: auto;
     border-radius: 3px;
-    margin-bottom: 10px;
 }
 
 .meme span {
@@ -104,8 +102,3 @@ main {
     top: 0;
 }
 
-.body::after{
-    content: '';
-    display: block;
-    height: 50px;
-}
